--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,13 @@
 .App {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
+  min-height: 100%;
+  position: relative;
 }
 
 .App-header {
   background-color: white;
-  min-height: 20vh;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,4 +19,9 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.content {
+  padding: 10px;
+  padding-bottom: 20px
 }
