--- a/src/css/HowItWorks.css
+++ b/src/css/HowItWorks.css
@@ -21,6 +21,22 @@
     color: #eda1aa;
 }
 
+.numberCircleSmall {
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    padding: 5px;
+    display: inline-flex;
+    background: #eda1aa;
+    border: 2px solid #eda1aa;
+    color: white;
+    text-align: center;
+    align-items: center;
+    font-weight: bolder;
+    justify-content: center;
+
+}
+
 .step {
     font-size: 16px;
 }
