--- a/src/css/BrowserExtension.css
+++ b/src/css/BrowserExtension.css
@@ -8,12 +8,19 @@
 .flex-container-browser > div {
     width: 500px;
     margin: 50px;
-    height: 300px;
+    /*height: 300px;*/
+    height: auto;
+    max-width: 100%;
     text-align: center;
     justify-content: center;
     align-items: center;
     color: #444444;
     font-size: 20px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 #smile {
