--- a/src/css/Causes.css
+++ b/src/css/Causes.css
@@ -2,7 +2,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 25px;
-    padding: 25px 100px;
+    padding: 25px 10%;
 }
 
 #cause {
