--- a/src/css/FAQ.css
+++ b/src/css/FAQ.css
@@ -7,7 +7,7 @@
 }
   
 .flex-container-faq > div {
-    margin: 10px 50px;
+    margin: 1% 5%;
     text-align: left;
     color: #444444;
     font-size: 20px;
