--- a/src/css/Team.css
+++ b/src/css/Team.css
@@ -9,7 +9,8 @@
 .flex-container-team > div {
     width: 500px;
     margin: 20px;
-    height: 650px;
+    height: auto;
+    max-width: 100%;
     text-align: center;
     justify-content: center;
     align-items: center;
