Added newly approved retailers from Rakuten and Impact

--- a/src/css/Retailers.css
+++ b/src/css/Retailers.css
@@ -2,6 +2,12 @@
     color: #eda1aa;
 }
 
+#retailer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .flex-container {
     display: flex;
     justify-content: center;
@@ -14,7 +20,7 @@
     background-color: #f1f1f1;
     width: 300px;
     margin: 10px;
-    min-height: 100px;
+    min-height: 150px;
     text-align: center;
     color: #444444;
     font-size: 20px;
@@ -44,11 +50,11 @@
 
 #company-description {
     font-size: 14px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px;
 }
 
 #promo-code {
     font-size: 14px;
-    padding: 0 10px 10px 10px;
+    padding: 0 10px;
     color: #eda1aa;
 }
