--- a/src/css/SoulsmileFooter.css
+++ b/src/css/SoulsmileFooter.css
@@ -72,7 +72,7 @@
 }
 .copyright-text
 {
-  margin:0
+  margin:0;
 }
 @media (max-width:991px)
 {
@@ -152,13 +152,20 @@
 {
   background-color:#3b5998
 }
+
 .social-icons a.instagram:hover
 {
   background-color:#e1306c
 }
+
 .social-icons a.linkedin:hover
 {
   background-color:#007bb6
+}
+
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
 }
 
 #email {
