Restructured website to include separate web app and adding functionality and styling

--- a/src/css/Payment.css
+++ b/src/css/Payment.css
@@ -6,3 +6,10 @@
 	display: flex;
 	flex-direction: column;
 }
+
+.paymentContent {
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	min-height: 100vh;
+}
