--- a/src/css/SoulsmileNavbar.css
+++ b/src/css/SoulsmileNavbar.css
@@ -1,6 +1,6 @@
 .navbar {
     min-height: 10vmin;
-    /*background-color: white;*/
+    background-color: white;
 }
 
 .navbar #basic-navbar-nav>li>a {
