--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -1,13 +1,14 @@
 .feed {
     margin-top: 25px;
     display: flex;
-    align-items: start;
+    align-items: flex=start;
     justify-content: center;
     background-color: white;
     flex-direction: column;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 4px;
 	padding: 20px 20px;
+	width: 45vw;
 }
 
 .feedTitle {
@@ -15,11 +16,18 @@
 	font-weight: 500;
 	text-align: left;
 	color: #444444;
+	opacity: 0.7;
 }
 
 .scrollContainer {
 	display: flex;
 	flex-direction: column;
-	align-items: start;
-	justify-content: start;
+	align-items: flex-start;
+	justify-content: flex-start;
+	width: 100%;
+}
+
+#noPostsMessage {
+	padding: 4%;
+	font-size: 22px;
 }
