--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -20,3 +20,63 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.loginForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button {
+    background-color: white;
+    color: #444444;
+}
+
+.icon {
+    margin: 0px 10px;
+    color: #eda1aa;
+}
+
+.donate {
+    padding: 0;
+    border-color: #ccc;
+}
+
+.login {
+    width: 30rem;
+    padding: 12px 20px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 3rem;
+    text-align: left;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+
+.amount {
+    width: 190px;
+    padding: 12px 20px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.submit {
+    background-color: #444444;
+    text-align: center !important;
+    color: white;
+}
+
+.submit:hover {
+    background-color: #262626;
+}
+
+#loginOrSignup {
+    color: #eda1aa;
+}
+  
+#loginOrSignup:hover {
+    text-decoration: underline;
+}
