--- a/src/css/RetailerPage.css
+++ b/src/css/RetailerPage.css
@@ -74,5 +74,10 @@
 
 #disclosureMessage {
 	font-size: 15px;
-	padding: 50px 250px;
+	padding: 50px 250px 20px;
+}
+
+#updateNote {
+  padding: 0 250px;
+  font-size: 15px;
 }
