Complete like and paypal functionality

--- a/src/css/GiveSoulsmilesForm.css
+++ b/src/css/GiveSoulsmilesForm.css
@@ -56,10 +56,17 @@
 
 .giveAmountAndCause {
   display: flex;
+  align-self: flex-start;
   align-items: center;
   justify-content: center;
   /*font-weight: 500;*/
   font-size: 20px;
+}
+
+.paypalMessage {
+  font-weight: 500;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 #giveSoulsmiles {
@@ -118,7 +125,7 @@ input[type=number] {
 
 .giveSoulsmilesContainer {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   margin: 0 5px;
 }
