dynamic url testing and static url + props implementation part 2

--- a/src/css/AffiliateBanner.css
+++ b/src/css/AffiliateBanner.css
@@ -1,3 +1,7 @@
+#affHeader {
+    padding-top: 30px;
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -12,5 +16,5 @@ img {
 }
 
 #affButton {
-    padding-top: 30px;
+    padding-top: 20px;
 }
